--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "devDependencies": {
         "npm-run-all": "~4.1.1",
         "prettier": "~1.7.4",
+        "rimraf": "~2.6.2",
         "rollup": "~0.50.0",
         "rollup-plugin-typescript": "~0.8.1",
         "typescript": "~2.5.3",
@@ -13,6 +14,7 @@
         "lint": "web-ext lint -s dist",
         "dev": "run-p dev:*",
         "dev:bundle": "run-s \"build:bundle -- -w\"",
-        "dev:web-ext": "web-ext run -s dist --bc"
+        "dev:web-ext": "web-ext run -s dist --bc",
+        "clean": "rimraf dist/*/"
     }
 }
