--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
     "private": true,
     "devDependencies": {
+        "base-x": "~3.0.2",
+        "cssnano": "~3.10.0",
+        "node-sass": "~4.5.3",
         "npm-run-all": "~4.1.1",
+        "postcss-modules": "~1.1.0",
         "prettier": "~1.7.4",
         "rimraf": "~2.6.2",
         "rollup": "~0.50.0",
+        "rollup-plugin-commonjs": "~8.2.6",
+        "rollup-plugin-node-resolve": "~3.0.0",
+        "rollup-plugin-postcss": "~0.5.5",
         "rollup-plugin-typescript": "~0.8.1",
         "typescript": "~2.5.3",
         "web-ext": "~2.2.2"
