--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "web-ext": "~2.2.2"
     },
     "scripts": {
+        "build": "run-p build:bundle",
         "build:bundle": "rollup -c",
         "lint": "web-ext lint -s dist",
         "dev": "run-p dev:*",
