--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
         "base-x": "~3.0.2",
         "cssnano": "~3.10.0",
         "node-sass": "~4.6.0",
-        "npm-run-all": "~4.1.1",
+        "npm-run-all": "~4.1.2",
         "postcss-modules": "~1.1.0",
-        "prettier": "~1.7.4",
+        "prettier": "~1.8.1",
         "rimraf": "~2.6.2",
-        "rollup": "~0.50.0",
+        "rollup": "~0.51.0",
         "rollup-plugin-commonjs": "~8.2.6",
         "rollup-plugin-node-resolve": "~3.0.0",
         "rollup-plugin-postcss": "~0.5.5",
         "rollup-plugin-typescript": "~0.8.1",
+        "toml": "~2.3.3",
         "typescript": "~2.6.1",
         "web-ext": "~2.2.2"
     },
@@ -23,6 +24,6 @@
         "dev": "run-p dev:*",
         "dev:bundle": "run-s \"build:bundle -- -w\"",
         "dev:web-ext": "web-ext run -s dist --bc",
-        "clean": "rimraf dist/*/"
+        "clean": "rimraf js dist/*/ web-ext-artifacts"
     }
 }
