--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "devDependencies": {
+        "ajv": "~5.3.0",
         "base-x": "~3.0.2",
         "cssnano": "~3.10.0",
         "node-sass": "~4.6.0",
@@ -8,7 +9,7 @@
         "postcss-modules": "~1.1.0",
         "prettier": "~1.8.1",
         "rimraf": "~2.6.2",
-        "rollup": "~0.51.0",
+        "rollup": "~0.50.1",
         "rollup-plugin-commonjs": "~8.2.6",
         "rollup-plugin-node-resolve": "~3.0.0",
         "rollup-plugin-postcss": "~0.5.5",
