--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
         "dev": "run-p dev:*",
         "dev:bundle": "run-s \"build:bundle -- -w\"",
         "dev:web-ext": "web-ext run -s dist --bc",
-        "clean": "rimraf js dist/*/ web-ext-artifacts"
+        "clean": "rimraf js dist/js/ dist/css/ web-ext-artifacts"
     }
 }
