--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     },
     "scripts": {
         "build": "run-p build:*",
-        "sign": "web-ext -s dist sign --api-key=$(jq -r .key user.json) --api-secret=$(jq -r .secret user.json)",
+        "sign":
+            "web-ext -s dist sign --api-key=$(jq -r .key user.json) --api-secret=$(jq -r .secret user.json)",
         "build:bundle": "rollup -c",
         "build:html": "pug pug -o dist/html",
         "build:css": "node-sass sass -o dist/css",
         "lint": "web-ext lint -s dist",
         "dev": "run-p dev:*",
         "dev:bundle": "run-s \"build:bundle -- -w\"",
-        "dev:html": "run-s \"build:html -- -w\"",
+        "dev:html": "aurel -w pug -s build:html",
         "dev:css": "aurel -w sass -s build:css",
         "dev:web-ext": "web-ext run -s dist --bc",
         "clean": "rimraf js dist/js/ dist/css/ dist/html/ web-ext-artifacts"
