--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
         "build:bundle": "rollup -c",
         "build:html": "pug pug -o dist/html",
         "build:css": "node-sass sass -o dist/css",
-        "build:monaco":
+        "build:monaco": "run-p build:monaco:*",
+        "build:monaco:yaml":
+            "copyfiles -u 3 'node_modules/monaco-editor/min/vs/basic-languages/src/yaml.js' dist/js",
+        "build:monaco:main":
             "copyfiles -u 3 -e '**/?(language|basic-languages)/**' 'node_modules/monaco-editor/min/vs/**' dist/js",
         "lint": "web-ext lint -s dist -i js/vs",
         "dev": "run-p dev:*",
